# Kickstarter_Projects_Analysis

./: .gitignore  README.md  index_1.ipynb  pyproject.toml
